[package]
name = "wabi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/runtime/*", "crates/mod/*"]

[dependencies]
bevy = { version = "0.9.0-dev", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "render",
    "filesystem_watcher",
] }
bevy_reflect = "0.9.0-dev"

wabi_runtime_api = { path = "crates/runtime/api" }

futures-lite = "1.12"

rmp-serde = "1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wabi_wasmtime = { path = "crates/runtime/wasmtime" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wabi_wasm_bindgen = { path = "crates/runtime/wasm_bindgen" }

[dev-dependencies]
rmpv = { version = "1.0", features = ["with-serde"] }
serde_json = "1.0"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "6f2cc0b" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", rev = "6f2cc0b" }

[profile.dev.package."*"]
opt-level = 3

[profile.mod-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1

[[example]]
name = "view_json_values"
path = "examples/view_json_values.rs"
