[package]
name = "wabi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/runtime/*", "crates/mod/*"]


[features]
default = ["json"]

json = ["dep:serde_json"]

[dependencies]
# Wabi internal crates
wabi_runtime_api = { path = "crates/runtime/api" }

# Bevy!
bevy = { version = "0.9.0-dev", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "render",
    "filesystem_watcher",
] }
# We need explicit Bevy Reflect due to TypeRegister
bevy_reflect = "0.9.0-dev"

# Ser/de related crates
rmp-serde = "1.1"
serde_json = { version = "1", optional = true }

# Wasm runtime when targeting native platforms
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wabi_wasmtime = { path = "crates/runtime/wasmtime" }

# Wasm runtime when targeting web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wabi_wasm_bindgen = { path = "crates/runtime/wasm_bindgen" }


[dev-dependencies]
rmpv = { version = "1.0", features = ["with-serde"] }
serde_json = "1.0"


# Using Bevy 0.9 due to improvements on Bevy Reflect
[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "404b4fc" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", rev = "404b4fc" }


# Optimize Wasmtime, due to cranelift taking ages to compile in debug mode.
[profile.dev.package."*"]
opt-level = 3


# Optimize mod for speed and size. Taken from Bevy examples.
[profile.mod-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1


# Examples used for debugging specific code.
[[example]]
name = "view_json_values"
path = "examples/view_json_values.rs"

[[example]]
name = "reflect_serde"
path = "examples/reflect_serde.rs"
