[package]
name = "wabi_mod_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy = { version = "0.9.0-dev", default-features = false }
bevy_math = { version = "0.9.0-dev" }
bevy_reflect = "0.9.0-dev"

num_enum = "0.5"

[[bin]]
name = "main"
path = "src/main.rs"
