[package]
name = "dummy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy_reflect = { version = "0.9.0-dev" }

wabi_mod_api = { path = "../api" }
rmp-serde = "1.1"
