[package]
name = "wabi_mod_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["json"]

json = ["dep:serde_json"]

[dependencies]
wabi_mod_api = { path = "../api" }

bevy_reflect = { version = "0.9.0-dev" }

rmp-serde = "1.1"
serde_json = { version = "1", optional = true }
