[package]
name = "wabi_wasm_bindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wabi_runtime_api = { path = "../api" }

bevy = "0.9.0-dev"
bevy_reflect = "0.9.0-dev"

bincode = "1.3"

wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }

# wasm-bindgen stuff
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }

