[package]
name = "bevy_wabi_wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_wabi_api = { path = "../api" }

bevy_tasks = "0.8"

wasmtime = "0.40"

# Use this until async traits is officialy supported in Rust
async-trait = "0.1"